[FIX] Fixed paragraph spacings

--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,10 @@ hr{
     height: 100px;
 }
 
+#last-paragraph{
+    padding-bottom: 200px;
+}
+
 /* Utilities */
 .black-text{
     color: #000;
